--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "csv-lint"
 description: "Run CSV Lint"
-author: "Kyle Umstatter"
+author: "blackstar257"
 branding:
   icon: "file-text"
   color: "gray-dark"
